# genome_infomatics_hw2

./: .gitignore  CMakeLists.txt  README.md
scripts/: ans.py  split.py
src/: CMakeLists.txt  genomeseq.cc  genomeseq.h  hidden_markov_model.cc  hidden_markov_model.h  markov_model.cc  simple_matrix.h
test/: CMakeLists.txt  bench_genomeseq.cc  test_genomeseq.cc  test_hmm.cc  test_matrix.cc
